# set-colortheme

./: Main.hs  README.md  flake.nix  set-colortheme.cabal
src/: Main.hs
